@@ -1,3 +1,11 @@
+2006-04-05  Han-Wen Nienhuys  <hanwen@lilypond.org>
+
+	* scripts/musicxml2ly.py (bindir): gub relocation. (bugfix backport.)
+
+	* scm/music-functions.scm (toplevel-music-functions): set
+	ly:quote-iterator::constructor from
+	toplevel-music-functions. (bugfix backport for mutual quotes.)
+
 2006-03-31  Graham Percival  <gpermus@gmail.com>
 
 	* Documentation/user/ advanced-notation, changing-defaults,
